# order-supervisor

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: runs.py  supervisors.py
backend/app/models/: activity.py  run.py  supervisor.py
backend/app/schemas/: activity.py  run.py  supervisor.py
backend/app/services/: run_service.py  supervisor_service.py
backend/app/temporal/: client.py  worker.py
backend/app/temporal/activities/: agent.py  business_actions.py  classifier.py  memory.py  persistence.py
backend/app/temporal/workflows/: order_supervisor.py
backend/scripts/: seed_supervisors.py  simulate_events.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/runs/: page.tsx
frontend/app/runs/[run_id]/: page.tsx
frontend/app/runs/new/: page.tsx
frontend/app/supervisors/: page.tsx
frontend/app/supervisors/new/: page.tsx
frontend/components/: Nav.tsx
frontend/components/runs/: ActivityTimeline.tsx  EventInjector.tsx  FinalSummaryPanel.tsx  InstructionAdder.tsx  MemorySummaryPanel.tsx  RunCard.tsx  RunControls.tsx  RunStatusBadge.tsx
frontend/components/supervisors/: SupervisorCard.tsx  SupervisorForm.tsx
frontend/lib/: api.ts  types.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.sql
